# public/swagger.json
@@ -358,6 +358,18 @@
 				}
 			}
 		},
+		"/materias/deletepensum": {
+			"delete": {
+				"operationId": "DeleteAllPensum",
+				"responses": {
+					"204": {
+						"description": "No content"
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/divisist/test": {
 			"get": {
 				"operationId": "Test",
